--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -55,16 +55,16 @@ html.is-animating .transition-swup-fade {
 
     opacity: 0;
     animation:
-      600ms fade-in,
-      600ms emergeFrom;
+      400ms fade-in,
+      400ms emergeFrom;
     animation-fill-mode: forwards;
   }
 
   .animate-reveal-center {
     opacity: 0;
     animation:
-      reveal-center 900ms cubic-bezier(0.4, 0.2, 0, 0.9),
-      1500ms fade-in;
+      900ms reveal-center cubic-bezier(0.4, 0.2, 0, 0.9),
+      900ms fade-in;
     animation-fill-mode: forwards;
     will-change: clip-path;
 
